<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="center">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/img_description"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <EditText
            android:id="@+id/etName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textPassword"/>
    </LinearLayout>
    <Button
        android:id="@+id/btRead"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/read"/>
    <Button
        android:id="@+id/btStartActivity"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/start"/>
    <Button
        android:id="@+id/btStartActivityForResult"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/startAndListen"/>
    <TextView
        android:id="@+id/tvLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"/>
    <TextView
        android:id="@+id/tvNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Notes 4 the future!"/>

</LinearLayout>